--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="https://www.instagram.com/accounts/emailsignup/">Sign Up</a>
                 </div>
                 <div class="hero-image">
-                    <img src="Images/hero image.jpg" alt="Instagram Hero Image">
+                    <img src="Images/hero.png" alt="Instagram Hero Image">
                 </div>
             </div>
         </section>
