--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Explore</a></li>
-                    <li><a href="https://www.instagram.com/accounts/login/">Login</a></li>
+                    <li><a href="http://127.0.0.1:5500/email.html">Signup</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,7 +31,7 @@
                 <div class="hero-content">
                     <h1>Instagram</h1>
                     <p>Join Instagram to see photos and videos from your friends.</p>
-                    <a href="https://www.instagram.com/accounts/emailsignup/">Sign Up</a>
+                    <a href="http://127.0.0.1:5500/email.html">Sign Up</a>
                 </div>
                 <div class="hero-image">
                     <img src="Images/hero.png" alt="Instagram Hero Image">
